testdata/baselines/reference/submodule/compiler/import_var-referencing-an-imported-module-alias.errors.txt
consumer.ts(1,23): error TS2307: Cannot find module 'host' or its corresponding type declarations.


==== consumer.ts (1 errors) ====
    import host = require("host");
                          ~~~~~~
!!! error TS2307: Cannot find module 'host' or its corresponding type declarations.
    var hostVar = host;
    var v = new hostVar.Host();
     
==== host.ts (0 errors) ====
    export class Host { }
    